# goosey-tui

./: CMakeLists.txt  LICENSE  README.md  declarations.c  main.c  variables.h
